--- a/openapi/specs/users.yaml
+++ b/openapi/specs/users.yaml
@@ -1,3 +1,5 @@
+# RFC7807 Problem Details for HTTP APIs
+# https://datatracker.ietf.org/doc/html/rfc7807
 openapi: 3.0.3
 info:
   title: User API
@@ -34,10 +36,14 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 500
-                message: 'Internal server error'
+                type: https://example.com/problems/internal
+                title: Internal server error
+                status: 500
+                detail: Unexpected error occurred while processing the request.
+                error_code: INTERNAL_ERROR
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
     post:
       tags:
         - Users
@@ -70,19 +76,32 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 400
-                message: 'Invalid user data'
+                type: https://example.com/problems/invalid-request
+                title: Your request parameters didn't validate.
+                status: 400
+                detail: Validation failed.
+                error_code: INVALID_PARAMETERS
+                invalid_params:
+                  - name: email
+                    reason: must be a valid email address
+                  - name: name
+                    reason: must not be empty
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
         '500':
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 500
-                message: 'Internal server error'
+                type: https://example.com/problems/internal
+                title: Internal server error
+                status: 500
+                detail: Unexpected error occurred while processing the request.
+                error_code: INTERNAL_ERROR
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
 
   /users/{user_id}:
     parameters:
@@ -92,8 +111,6 @@ paths:
         required: true
         schema:
           type: string
-          format: uuid
-          pattern: '^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-7[0-9a-fA-F]{3}-[89ABab][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$'
           minLength: 36
           maxLength: 36
     get:
@@ -119,19 +136,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 404
-                message: 'User not found'
+                type: https://example.com/problems/user-not-found
+                title: User not found
+                status: 404
+                detail: No user with the given ID was found.
+                error_code: USER_NOT_FOUND
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
         '500':
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 500
-                message: 'Internal server error'
+                type: https://example.com/problems/internal
+                title: Internal server error
+                status: 500
+                detail: Unexpected error occurred while processing the request.
+                error_code: INTERNAL_ERROR
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
     patch:
       tags:
         - Users
@@ -164,28 +189,45 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 400
-                message: 'Invalid user data'
+                type: https://example.com/problems/invalid-request
+                title: Your request parameters didn't validate.
+                status: 400
+                detail: Validation failed.
+                error_code: INVALID_PARAMETERS
+                invalid_params:
+                  - name: email
+                    reason: must be a valid email address
+                  - name: name
+                    reason: must not be empty
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
         '404':
           description: User not found
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 404
-                message: 'User not found'
+                type: https://example.com/problems/user-not-found
+                title: User not found
+                status: 404
+                detail: No user with the given ID was found.
+                error_code: USER_NOT_FOUND
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
         '500':
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 500
-                message: 'Internal server error'
+                type: https://example.com/problems/internal
+                title: Internal server error
+                status: 500
+                detail: Unexpected error occurred while processing the request.
+                error_code: INTERNAL_ERROR
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
     delete:
       tags:
         - Users
@@ -200,19 +242,27 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 404
-                message: 'User not found'
+                type: https://example.com/problems/user-not-found
+                title: User not found
+                status: 404
+                detail: No user with the given ID was found.
+                error_code: USER_NOT_FOUND
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
         '500':
           description: Internal server error
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Error'
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
               example:
-                code: 500
-                message: 'Internal server error'
+                type: https://example.com/problems/internal
+                title: Internal server error
+                status: 500
+                detail: Unexpected error occurred while processing the request.
+                error_code: INTERNAL_ERROR
+                trace_id: 123e4567-e89b-12d3-a456-426614174000
 
 components:
   schemas:
@@ -222,9 +272,7 @@ components:
       properties:
         id:
           type: string
-          format: uuid
           description: Unique identifier for the user (UUIDv7)
-          pattern: '^[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-7[0-9a-fA-F]{3}-[89ABab][0-9a-fA-F]{3}-[0-9a-fA-F]{12}$'
           minLength: 36
           maxLength: 36
           x-oapi-codegen-extra-tags:
@@ -237,16 +285,13 @@ components:
         name:
           type: string
           description: Full name of the user
-          pattern: '^.+$'
           minLength: 1
           maxLength: 100
           x-oapi-codegen-extra-tags:
             binding: 'required,min=1,max=100'
         email:
           type: string
-          format: email
           description: Email address of the user
-          pattern: '^[^@]+@[^@]+\.[^@]+$'
           minLength: 5
           maxLength: 254
           x-oapi-codegen-extra-tags:
@@ -263,16 +308,13 @@ components:
         name:
           type: string
           description: Full name of the user
-          pattern: '^.+$'
           minLength: 1
           maxLength: 100
           x-oapi-codegen-extra-tags:
             binding: 'required,min=1,max=100'
         email:
           type: string
-          format: email
           description: Email address of the user
-          # pattern: '^[^@]+@[^@]+\.[^@]+$'
           minLength: 5
           maxLength: 254
           x-oapi-codegen-extra-tags:
@@ -303,19 +345,19 @@ components:
       required:
         - user
 
-    Error:
-      type: object
-      description: Error response
-      properties:
-        code:
-          type: integer
-          format: int32
-          minimum: 0
-          maximum: 1000
-          description: Application-specific error code
-        message:
-          type: string
-          description: Error message
-      required:
-        - code
-        - message
+    # Error:
+    #   type: object
+    #   description: Error response
+    #   properties:
+    #     code:
+    #       type: integer
+    #       format: int32
+    #       minimum: 0
+    #       maximum: 1000
+    #       description: Application-specific error code
+    #     message:
+    #       type: string
+    #       description: Error message
+    #   required:
+    #     - code
+    #     - message
