--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
         "ms-azuretools.vscode-containers",
         "ms-azuretools.vscode-docker",
         "esbenp.prettier-vscode",
-        "golang.go"
+        "golang.go",
+        "saoudrizwan.claude-dev"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash"
