--- a/compose.yaml
+++ b/compose.yaml
@@ -9,41 +9,17 @@ services:
       context: .
     ports:
       - '8080:8080'
-
-  # https://hub.docker.com/r/migrate/migrate
-  # https://github.com/golang-migrate/migrate
-  goapp-migrate-up:
-    image: migrate/migrate:v4.18.3
     command:
-      - -database
-      - 'postgresql://postgres:hogehoge@postgres:5432/test_db?sslmode=disable'
-      - -path
-      - /goapp/db/migrations
-      - up
+      - goapp
+      - --config
+      - /goapp/config/config.yaml
     volumes:
-      - ${LOCAL_WORKSPACE_FOLDER:-.}/db/migrations:/goapp/db/migrations
-    profiles:
-      - migrate-only
-
-  # https://hub.docker.com/r/migrate/migrate
-  # https://github.com/golang-migrate/migrate
-  goapp-migrate-down:
-    image: migrate/migrate:v4.18.3
-    command:
-      - -database
-      - 'postgresql://postgres:hogehoge@postgres:5432/test_db?sslmode=disable'
-      - -path
-      - /goapp/db/migrations
-      - down
-    volumes:
-      - ${LOCAL_WORKSPACE_FOLDER:-.}/db/migrations:/goapp/db/migrations
-    profiles:
-      - migrate-only
+      - ${LOCAL_WORKSPACE_FOLDER:-.}/config/goapp:/goapp/config
 
   # https://hub.docker.com/_/postgres
   # https://github.com/postgres/postgres
   postgres:
-    image: postgres
+    image: postgres:17
     ports:
       - 5432:5432
     environment:
@@ -62,12 +38,53 @@ services:
     depends_on:
       - postgres
 
+  # https://hub.docker.com/r/migrate/migrate
+  # https://github.com/golang-migrate/migrate
+  goapp-migrate-up:
+    image: migrate/migrate:v4.18.3
+    command:
+      - -database
+      - 'postgresql://postgres:hogehoge@postgres:5432/test_db?sslmode=disable'
+      - -path
+      - /goapp/db/migrations
+      - up
+    volumes:
+      - ${LOCAL_WORKSPACE_FOLDER:-.}/db/migrations:/goapp/db/migrations
+    profiles:
+      - run-only
+
+  # https://hub.docker.com/r/migrate/migrate
+  # https://github.com/golang-migrate/migrate
+  goapp-migrate-down:
+    image: migrate/migrate:v4.18.3
+    command:
+      - -database
+      - 'postgresql://postgres:hogehoge@postgres:5432/test_db?sslmode=disable'
+      - -path
+      - /goapp/db/migrations
+      - down
+    volumes:
+      - ${LOCAL_WORKSPACE_FOLDER:-.}/db/migrations:/goapp/db/migrations
+    profiles:
+      - run-only
+
   # https://github.com/valkey-io/valkey
   # https://hub.docker.com/r/valkey/valkey
   valkey:
-    image: valkey/valkey
+    image: valkey/valkey:8.1.1
     ports:
       - 6379:6379
+
+  # https://hub.docker.com/r/redis/redisinsight
+  # https://github.com/RedisInsight/RedisInsight
+  redisinsight:
+    image: redis/redisinsight:2.68
+    ports:
+      - 5540:5540
+    environment:
+      RI_APP_HOST: 0.0.0.0
+      RI_REDIS_HOST: valkey
+      RI_REDIS_PORT: '6379'
 
   # ##################################################################
   # Dashboard
@@ -186,7 +203,7 @@ services:
       - '4040:4040'
 
   # ##################################################################
-  # Log
+  # Logs
   # ##################################################################
 
   # https://hub.docker.com/r/grafana/loki
@@ -213,3 +230,65 @@ services:
       - ${LOCAL_WORKSPACE_FOLDER:-.}/config/loki:/etc/loki
       - /var/log:/var/log
       - /var/run/docker.sock:/var/run/docker.sock:ro
+
+  # ##################################################################
+  # Logs, Traces, Profiles, Metrics
+  # ##################################################################
+
+  # https://hub.docker.com/r/otel/opentelemetry-collector-contrib
+  # https://github.com/open-telemetry/opentelemetry-collector
+  # https://opentelemetry.io/docs/collector/installation/
+  # https://opentelemetry.io/docs/languages/go/getting-started/
+  # https://opentelemetry.io/docs/languages/go/instrumentation/
+  opentelemetry-collector:
+    image: otel/opentelemetry-collector-contrib:0.126.0
+    ports:
+      - '51888:1888' # pprof extension
+      - '58888:8888' # Prometheus metrics exposed by the Collector
+      - '58889:8889' # Prometheus exporter metrics
+      - '53133:13133' # health_check extension
+      - '54317:4317' # OTLP gRPC receiver
+      - '54318:4318' # OTLP http receiver
+      - '55679:55679' # zpages extension
+    command:
+      - --config=/etc/otelcol-contrib/config/config.yaml
+      - '--feature-gates=+service.profilesSupport'
+    environment:
+      - OTELCOL_FEATURE_GATES=+service.profilesSupport
+    volumes:
+      - ${LOCAL_WORKSPACE_FOLDER:-.}/config/opentelemetry-collector:/etc/otelcol-contrib/config
+
+  # ##################################################################
+  # OpenAPI
+  # ##################################################################
+
+  # https://hub.docker.com/r/redocly/cli
+  # https://github.com/Redocly/redocly-cli
+  openapi-viewer:
+    image: redocly/cli:1.34.3
+    ports:
+      - '18080:8080'
+    command:
+      - preview-docs
+      - /openapi/openapi.yaml
+      - --host
+      - 0.0.0.0
+    volumes:
+      - ${LOCAL_WORKSPACE_FOLDER:-.}/.openapi:/openapi
+
+  # ##################################################################
+  # Load Testing
+  # ##################################################################
+
+  # https://hub.docker.com/r/grafana/k6
+  # https://github.com/grafana/k6
+  k6:
+    image: grafana/k6:1.0.0
+    working_dir: /k6
+    command:
+      - run
+      - /k6/script.js
+    volumes:
+      - ${LOCAL_WORKSPACE_FOLDER:-.}/config/k6:/k6:ro
+    profiles:
+      - run-only
