--- a/openapi/specs/problem_details.yaml
+++ b/openapi/specs/problem_details.yaml
@@ -1,3 +1,5 @@
+# RFC7807 Problem Details for HTTP APIs
+# https://datatracker.ietf.org/doc/html/rfc7807
 openapi: 3.0.3
 info:
   title: RFC7807 Problem Details
